# wealth

./: README.md  setup.cfg
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html  wealth_demo.ipynb
docs/_modules/: index.html
docs/_modules/dol/: trans.html
docs/_modules/wealth/: animation.html  dacc.html  ishares_src.html  util.html
docs/_sources/module_docs/: wealth.rst.txt
docs/_sources/module_docs/wealth/: aligned_umap_analysis.rst.txt
docs/module_docs/: wealth.html
docs/module_docs/wealth/: aligned_umap_analysis.html  animation.html  dacc.html  ishares_src.html  util.html
docsrc/: index.rst  table_of_contents.rst
docsrc/module_docs/wealth/: animation.rst  dacc.rst  ishares_src.rst  util.rst
wealth/: __init__.py  aligned_umap_analysis.py  animation.py  dacc.py  ishares_src.py  util.py
wealth/data/: embeddings_stats.json  reducer_specs.json
