[metadata]
name = wealth
version = 0.0.4
url = https://github.com/thorwhalen/wealth
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Visualizing financial relations and evolutions
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = wealth

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	matplotlib
	numpy
	pandas
	celluloid
	importlib_resources
	py2store
	lined
	argh
	graze

