[metadata]
name = wealth
version = 0.1.3
url = https://github.com/thorwhalen/wealth
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Visualizing financial relations and evolutions
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = wealth

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	matplotlib
	numpy
	pandas
	celluloid
	importlib_resources
	py2store
	lined
	argh
	graze
	scipy
	scikit-learn
	dol
	i2
	requests
	umap-learn


[options.data_files]
data =
	wealth/data/csv_derived.zip
	wealth/data/embeddings_stats.json
	wealth/data/flattened_sp500_compositions.json
	wealth/data/reducer_specs.json
	wealth/data/sp500_compositions.json